# vein

./: README.md  app.py  fragments.sql  notes.txt  pyproject.toml  user_man.py
artwork/: vein-faces.xcf  vein-janus-face.xcf  work.xcf
templates/: 404.html  base.html  footer.html  index.html  login.html
templates/vein/: index.html  result-stats.html  results.html  survey.html
templates/veinadmin/: index.html
vein/: __init__.py  data.py  middleware.py  models.py  views.py
vein/templates/: base.html  index.html
veinadmin/: views.py
