[tool.poetry]
name = "vein"
version = "0.1.0"
description = ""
authors = ["Iwan van der Kleijn <iwanvanderkleijn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pydantic = "^1.10.4"
flask-sqlalchemy = "^3.0.3"
bcrypt = "^4.0.1"
pytest = "^7.2.1"
flask-wtf = "^1.1.1"
flask-admin = "^1.6.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
